--- a/index.html
+++ b/index.html
@@ -16,6 +16,58 @@
 
   <div class="container" >
     <!--Jumbotron-->
+      <div class="jumbotron">
+        <h2>Thomas Trains.</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+
+          <div class="panel-panel-primary">
+            <div class="panel-heading" id="t1">
+              <h3 class="panel-title">Train Scheduler</h3>
+            </div>
+            <div class="panel-body">
+              <table class="table table-hover" id="trainTable">
+                <thead>
+                  <tr>
+                    <th>Train Name</th>
+                    <th>destination</th>
+                    <th>frequency</th>
+                    <th>Next Arrival</th>
+                    <th>Minutes Away</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  
+                </tbody>
+              </table>
+            </div>
+          </div>
+
+          <!--input-->
+          <div class="panel panel-primary">
+            <div class="panel-heading" id="t2">
+              <h3 class="addTrainTitle">Add Train</h3>
+            </div>
+            <div class="panel-body">
+
+             <!--Train entry form--> 
+              <form id="main-form">
+                <div class="form-group">
+                  <label for="">Train Name</label>
+                  <input type="text" class="form-control" id="trainNameInput">
+                </div>
+
+                <div class="form-group">
+                  
+                </div>
+              </form>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
 
   </div>
 
