changed time to 24 hr clock

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" />
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<!--Bootstrap CSS link-->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	
+	
 
 </head>
 
@@ -68,7 +71,7 @@
 
                   <!--First Train-->
                   <div class="form-group">
-                    <label for="">First Train Time (HH:mm - military time)</label>
+                    <label for="">First Train Time (HHmm 24 hr Clock)</label>
                     <input type="text" class="form-control" id="firstTrainInput">
                   </div>
 
@@ -90,16 +93,16 @@
 
   </div>
 
-    <script src="https://www.gstatic.com/firebasejs/6.2.4/firebase-app.js"></script>
-
-
+<!--Jquery link-->
+		<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+	<!--Moment.js link-->
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    
+    <!--Firebase link-->
     <script src="https://cdn.firebase.com/js/client/2.4.1/firebase.js"></script>
     
-    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-
-    <script src="app.js"></script>
+	<!--Javascript file link-->
+		<script type="text/javascript" src="app.js"></script>
 
 
 </body>
